tp - wik-dps-tp04/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
spec:
  containers:
  - name: echo-container
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 80
